Fix resume link distorting nav links alignment.

--- a/src/components/Navbar/Nav.css
+++ b/src/components/Navbar/Nav.css
@@ -42,7 +42,7 @@
 .nav-links {
   color: white;
   text-decoration: none;
-  padding: 0.5rem 1rem;
+  padding: 1rem 1.5rem;
 }
 
 .nav-links:hover {
@@ -72,7 +72,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 500px;
+    height: 400px;
     position: absolute;
     top: 80px;
     left: -100%;
